# echo

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/images/docker-icons/: colors.json
assets/linux/: echo.desktop
assets/windows/: app.rc
locales/: echo.yml
scripts/: extract-docker-icon-colors.mjs  fetch-docker-official-icons.sh  package-lock.json  package.json
src/: app.rs  assets.rs  domain.rs  i18n.rs  main.rs  ui.rs
src/app/: model.rs  preferences.rs  services.rs  tray.rs  updates.rs  workspace.rs
src/bridge/: mod.rs  resolver.rs  session.rs  sync.rs  types.rs
src/bridge/backends/: local.rs
src/ui/: charts.rs  docker_icons.rs  header.rs  settings.rs  sidebar.rs  snapshot.rs  theme.rs
src/ui/containers/: detail.rs  format.rs  header.rs  list.rs  logs.rs  metrics.rs  mod.rs  shell.rs  status.rs  style.rs
src/ui/images/: mod.rs
src/ui/networks/: create.rs  mod.rs
src/ui/terminal/: colors.rs  event.rs  input.rs  mod.rs  render.rs  terminal.rs  view.rs
src/ui/volumes/: mod.rs
