[package]
name = "echo"
version = "0.1.5"
edition = "2024"
license = "BUSL-1.1"
description = "A lightweight desktop app for managing local Docker environments."
repository = "https://github.com/echo-and/echo"
homepage = "https://github.com/echo-and/echo"
readme = "README.md"
publish = false
exclude = [
    ".project/**",
    "scripts/node_modules/**",
    "target/**",
]

[build-dependencies]
embed-resource = "3.0.9"

[dependencies]
anyhow = "1.0.102"
alacritty_terminal = "0.26.0"
bollard = { version = "0.21.0", features = ["time"] }
dirs = "6.0.0"
flume = "0.12.0"
flate2 = "1.1.9"
futures-util = "0.3.32"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
image = { version = "0.25.10", default-features = false, features = ["ico", "png"] }
parking_lot = "0.12.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
strip-ansi-escapes = "0.2.1"
rust-i18n = "4"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tray-icon = { version = "0.24.0", default-features = false, features = ["gtk"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
